name:                snaplet-hasql
version:             1.0.0
synopsis:            A Hasql snaplet
license:             MIT
license-file:        LICENSE
author:              Mike Ledger
maintainer:          eleventynine@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Snaplet.Hasql,
                       Snap.Snaplet.Auth.Backends.Hasql
  build-depends:       base >=4.7 && <5.0, 
                       lens, 
                       mtl >=2.2, 
                       hasql >=0.7,
                       hasql-backend >= 0.4,
                       hasql-postgres >= 0.11,
                       clientsession >= 0.9,
                       configurator >= 0.3,
                       time >= 1.5,
                       text >= 1.0,
                       snap >=0.13,
                       bytestring >=0.10,
                       aeson >= 0.8 
  hs-source-dirs:      src
  default-language:    Haskell2010
